--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://9529d62d-5a39-468d-a801-3aac7afcffc6.preview.emergentagent.com
 WDS_SOCKET_PORT=443
