--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 MONGO_URL="mongodb://localhost:27017"
 DB_NAME="byteprep"
-GEMINI_API_KEY="AIzaSyA6ZAin8E37ZooJeE53kuW_f-bvuLy4cvU"
-GOOGLE_OAUTH_CLIENT_ID="172448869243-hukp4mmhp6mamd68e6k6k84bfhog8ouc.apps.googleusercontent.com"
-GOOGLE_OAUTH_CLIENT_SECRET="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"
+GEMINI_API_KEY="Your Gemini Api key"
+GOOGLE_OAUTH_CLIENT_ID="Oauth Client id"
+GOOGLE_OAUTH_CLIENT_SECRET="OAuth Client Secret"
